<resources>
    <string name="app_name">Home work 7 Java 2</string>
    <string name="menu">menu</string>
    <string name="account">account</string>
    <string name="rent_a_car">Rent a car</string>
    <string name="search">Search</string>
    <string name="bogamy">Bogamy</string>
    <string name="arrow">arrow</string>
    <string name="bicycle">bicycle</string>
    <string name="car">car</string>
    <string name="bus">bus</string>
</resources>