<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".MainActivity"
    android:paddingHorizontal="26dp">

    <ImageView
        android:id="@+id/iv_menu_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_menu"
        android:layout_marginTop="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/menu"/>

    <ImageView
        android:id="@+id/iv_account_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_account"
        android:layout_marginTop="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/account"/>

    <TextView
        android:id="@+id/tv_parent_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_menu_icon"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:text="@string/rent_a_car"
        android:textColor="@color/black"
        android:textSize="42sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_parent_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounder_et"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="10dp"
        android:hint="@string/search"
        android:textColorHint="@color/grey"
        android:paddingHorizontal="12dp"
        android:textColor="@color/grey"
        android:textSize="22sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_blue_card"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/et_search"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blue"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/iv_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arrow"
            android:paddingHorizontal="14dp"
            android:paddingTop="30dp"
            android:src="@drawable/ic_arrow" />

        <TextView
            android:id="@+id/tv_bogamy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="14dp"
            android:paddingTop="58dp"
            android:text="@string/bogamy"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_pink_card"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/cv_blue_card"
        android:layout_marginTop="46dp"
        android:backgroundTint="@color/pink"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/iv_arrow_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arrow"
            android:paddingHorizontal="14dp"
            android:paddingTop="30dp"
            android:src="@drawable/ic_arrow" />

        <TextView
            android:id="@+id/tv_bogamy_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="14dp"
            android:paddingTop="58dp"
            android:text="@string/bogamy"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_light_blue_card"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/cv_pink_card"
        android:layout_marginTop="46dp"
        android:backgroundTint="@color/light_blue"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/iv_arrow_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arrow"
            android:paddingHorizontal="14dp"
            android:paddingTop="30dp"
            android:src="@drawable/ic_arrow" />

        <TextView
            android:id="@+id/tv_bogamy_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="14dp"
            android:paddingTop="58dp"
            android:text="@string/bogamy"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/bicycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bicycle"
        android:layout_alignTop="@+id/cv_blue_card"
        android:layout_alignBottom="@+id/cv_blue_card"
        android:layout_alignParentEnd="true"
        android:elevation="2dp"
        android:src="@drawable/ic_bicycle" />

    <ImageView
        android:id="@+id/iv_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cv_pink_card"
        android:layout_alignBottom="@+id/cv_pink_card"
        android:layout_alignParentEnd="true"
        android:elevation="2dp"
        android:src="@drawable/ic_car"
        android:contentDescription="@string/car" />

    <ImageView
        android:id="@+id/iv_bus"
        android:layout_width="144dp"
        android:layout_height="76dp"
        android:layout_alignTop="@+id/cv_light_blue_card"
        android:layout_alignBottom="@+id/cv_light_blue_card"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/bus"
        android:elevation="2dp"
        android:src="@drawable/ic_bus" />

</RelativeLayout>